# rules_sops

./: BUILD.bazel  MODULE.bazel  README.md
sops/: def.bzl  extensions.bzl  toolchains.bzl
sops/rules/: BUILD.bazel  sops.bzl
sops/toolchains/sops/: BUILD.toolchain.tpl  toolchain.bzl
tests/bcr/: BUILD.bazel  MODULE.bazel  test.yaml  test_preencrypted_value.yaml
